# fNIRS_HIT

./: README.md
HyBrid_BCI/: Untitled.ipynb  class_info.py  config.py  config.ui  crc.py  display.py  display.ui  extinction_coefficients.csv  fNIRS.py  fnirs_8x8_montage.json  locate.py  locate.ui  main.py  mainwindow.py  mainwindow.ui  network.py  qualify.py  qualify.ui  ui_config.py  ui_display.py  ui_locate.py  ui_mainwindow.py  ui_qualify.py  ui_user.py  user.py  user.ui
HyBrid_BCI/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
HyBrid_BCI/montage/: EEG16_FNIRS8X8.json  device_config.json  fnirs_10x8.json  fnirs_8x8.json  fnirs_V10x8.json  fnirs_h10x8.json  new_config.json
HyBrid_BCI/resource/: Cap_coords_all.xls  pic.qrc
HyBrid_BCI/用户信息/: 患者信息.csv
fnrisV0_1/Upper/Upper_v0.1/: Mainwindow.ui  configuration.ui  display.ui  qualify.ui  ui_Mainwindow.py  ui_configuration.py  ui_display.py  ui_qualify.py  ui_user.py  user.ui
fnrisV0_1/Upper/fNIRS-Upper/: configure.py  crc.py  display.py  integration_example.py  mainwindow.py  mainwindow.ui  network.py  plot.py  sensor.py  sensorWidget.ui  sensorwidget.py  server.py  test.py  ui.py  ui_sensorwidget.py
fnrisV0_1/fNIRS-ESP32/: sdkconfig  sdkconfig.old
fnrisV0_1/fNIRS-ESP32/components/BSP/: CMakeLists.txt  dns_server.c  index.html  led.c  spi.c  transmit.c  uart.c  udp.c  web_server_post.c  wifi.c
fnrisV0_1/fNIRS-ESP32/components/BSP/include/: led.h  spi.h  transmit.h  uart.h  udp.h  web_server_post.h  wifi.h
fnrisV0_1/fNIRS-ESP32/main/: main.c
fnrisV0_1/fNIRS_V0_1-STM32/: .mxproject  fNIRS_V0_1.ioc
(+149 files in other folders)
